examples/good/06-07-fun-by-ref.oo
int x = 5;
int mult (int &y, int m) {
    y = y * m;
    return y;
}

print(mult(x, 3)); // 15
print(x); // 15
