examples/bad/typecheck/wrong-arg-type.oo
int mult3 (int y) {
    y = y * 3;
    return y;
}

mult3(true);
